--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "1weekgamejam.sln"
+    "dotnet.defaultSolution": "1week_Nai.sln"
 }
