--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.coffee.unmask": "https://github.com/mob-sakai/UnmaskForUGUI.git",
+    "com.koitan.koitanlib": "https://github.com/tk-koitan/KoitanLibPackage.git?path=Packages/KoitanLib",
     "com.unity.cinemachine": "2.9.7",
     "com.unity.collab-proxy": "2.6.0",
     "com.unity.feature.2d": "2.0.0",
